<resources>
    <string name="app_name">RoomDB2</string>
    <string name="city">City</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="house">House Number</string>
    <string name="street">Street</string>
    <string name="postal">Postal Code</string>
    <string name="car_make">Make</string>
    <string name="car_color">Color</string>
    <string name="car_model">Model</string>
    <string name="car_engine">Engine</string>
    <string name="car_value">Car Value</string>
    <string name="car_owner">Car Owner</string>
    <string name="btn_add_car">Add Car</string>
    <string name="btn_add_user">Add User</string>
    <string name="notice">%1s %2$s created successfully! </string>
    <string name="car">Car</string>
    <string name="user">User</string>
    <string name="btn_to_list">To Users</string>
    <string name="user_list">users</string>
    <string name="user_details">user</string>
    <string name="car_info">%1s %2s</string>
    <string name="failed_to_create">Missing Field, All fields are required!</string>
    <string name="user_address">Address</string>
    <string name="user_cars">Your Cars</string>
    <string name="num_cars">Number of Cars</string>
    <string name="tag_user_list">userList</string>
    <string name="tag_user_profile">userProfile</string>
    <string name="tag_add_user">addUser</string>
    <string name="user_id_label">User Id</string>
    <string name="title_create_user">Create Account</string>
    <string name="title_user_details">Your Profile</string>
    <string name="title_user_list"> Users</string>
    <string name="loading">Loading...</string>
</resources>